[tool.poetry]
name = "udc-py"
version = "0.1.0"
description = ""
authors = ["Ernest Prabhakar <ernest@quiltdata.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
py-agify = "^0.0.1"
pytest = "^7.4.2"
black = "^23.9.1"
requests = "^2.31.0"
js2py = "^0.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
